--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.application.name=SistemaDePromociones
 # ============================================
 spring.datasource.url=jdbc:mysql://localhost:3306/db_foodix?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # ============================================
@@ -34,3 +34,13 @@ spring.thymeleaf.suffix=.html
 # CONFIGURACIÓN DEL SERVIDOR
 # ============================================
 server.port=8080
+
+
+# Configuración del servidor de correo
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=sistemafoodix@gmail.com
+spring.mail.password=drbhqhpxoxwabnea
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
