--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,36 +1,28 @@
 spring.application.name=SistemaDePromociones
 
 # ============================================
-# CONFIGURACIÓN DE BASE DE DATOS MYSQL
+# CONFIGURACIÓN DE BASE DE DATOS (Leído desde Docker)
 # ============================================
-spring.datasource.url=jdbc:mysql://localhost:3306/db_foodix?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# ============================================
-# CONFIGURACIÓN DE JPA/HIBERNATE - DESACTIVADO
-# ============================================
-# DESACTIVAR Hibernate completamente para evitar conflictos
-spring.jpa.hibernate.ddl-auto=none
+# ... (Tu config de JPA/Hibernate déjala igual)
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 
 # ============================================
-# CONFIGURACIÓN DE SUBIDA DE ARCHIVOS
+# CONFIGURACIÓN DE SUBIDA DE ARCHIVOS (Leído desde Docker)
 # ============================================
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=25MB
-app.upload.dir=uploads
+app.upload.dir=${APP_UPLOAD_DIR}
 
-# ============================================
-# CONFIGURACIÓN DE THYMELEAF
-# ============================================
+# ... (Tu config de Thymeleaf y Server déjala igual)
 spring.thymeleaf.cache=false
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
-# ============================================
-# CONFIGURACIÓN DEL SERVIDOR
-# ============================================
 server.port=8080
